--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -2,76 +2,19 @@
 layout: default
 ---
 
+{% assign parts = page.content | split: site.excerpt_separator %}
+
+<h1 class="mt-4 py-2 ">
+  {{ parts | first | markdownify}}
+</h1>
 
 <div class="card-columns mt-4">
-  <!-- all posts -->
-  {% for post in site.posts %}
-  <div class="card">
-    {% if post.cover %}
-    <img class="card-img-top" src="{{post.cover.src}}" alt="Card image cap">
-    <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
-    {% endif %}
-    <div class="card-body">
-      <h5 class="card-title">{{ post.title }}</h5>
-      <p class="card-text">{{ post.excerpt }}</p>
-      {{ post.url }}
-      <p class="card-text"><small class="text-muted">{{ post.date }}</small></p>
-    </div>
-  </div>
+  <!-- all posts in this category -->
+  {% assign all_posts = site.posts %}
+  {% for post in all_posts %}
+    {% include post.html %}
   {% endfor %}
-  <!-- <div class="card p-3">
-    <blockquote class="blockquote mb-0 card-body">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-      <footer class="blockquote-footer">
-        <small class="text-muted">
-          Someone famous in <cite title="Source Title">Source Title</cite>
-        </small>
-      </footer>
-    </blockquote>
-  </div>
-  <div class="card">
-    <img class="card-img-top" src="..." alt="Card image cap">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card bg-primary text-white text-center p-3">
-    <blockquote class="blockquote mb-0">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-      <footer class="blockquote-footer">
-        <small>
-          Someone famous in <cite title="Source Title">Source Title</cite>
-        </small>
-      </footer>
-    </blockquote>
-  </div>
-  <div class="card text-center">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div>
-  <div class="card">
-    <img class="card-img" src="..." alt="Card image">
-  </div>
-  <div class="card p-3 text-right">
-    <blockquote class="blockquote mb-0">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-      <footer class="blockquote-footer">
-        <small class="text-muted">
-          Someone famous in <cite title="Source Title">Source Title</cite>
-        </small>
-      </footer>
-    </blockquote>
-  </div>
-  <div class="card">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-    </div>
-  </div> -->
 </div>
+<blockquote>
+  {{ parts | last }}
+</blockquote>
