--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer p-4">
-  <div class="container-fluid">
+  <div class="container">
     <div class="row">
       <div class="col-6">
         <p >
