--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,7 @@
 <aside class="p-4">
-  <h1 class="px-3 pt-4 text-normalize">{{ site.title }}</h1>
+  <h1 class="px-3 pt-4 text-normalize">
+    {{ site.title }}
+  </h1>
   <!-- current pag aliases -->
   {% assign aliases = site.pages|where:"ref",page.ref %}
   <!-- pages -->
