--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,6 +14,12 @@
         {% else %}
           {% assign is_active = false %}
         {% endif %}
+        <!-- post categories: highlight current category -->
+        {% if page.categories contains nav_item.ref %}
+          {% assign is_active = true %}
+        {% else %}
+          {% assign is_active = false %}
+        {% endif %}
         <a class="nav-link d-inline-block {% if is_active %} active {% endif %}" href="{{ nav_item.url }}">
           {{ nav_item.title }}
            <!-- ({{ nav_item.ref }}-{{page.ref}}-{{is_active}}) -->
