fix  relative link and active class on menu items

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -13,14 +13,18 @@
           {% assign is_active = true %}
         {% else %}
           {% assign is_active = false %}
+
+          {% if page.categories contains nav_item.ref %}
+            {% assign is_active = true %}
+            {% assign is_expanded = true %}
+          {% else %}
+            {% assign is_active = false %}
+            {% assign is_expanded = false %}
+          {% endif %}
         {% endif %}
         <!-- post categories: highlight current category -->
-        {% if page.categories contains nav_item.ref %}
-          {% assign is_active = true %}
-        {% else %}
-          {% assign is_active = false %}
-        {% endif %}
-        <a class="nav-link d-inline-block {% if is_active %} active {% endif %}" href="{{ nav_item.url }}">
+
+        <a class="nav-link d-inline-block {% if is_active %} active {% endif %}" href="{{site.baseurl}}{{ nav_item.url }}">
           {{ nav_item.title }}
            <!-- ({{ nav_item.ref }}-{{page.ref}}-{{is_active}}) -->
         </a>
