simplify active links style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,8 +24,7 @@
         white-space: nowrap;
       }
       a.nav-link.active{
-        background-color: black;
-        color: white;
+        color: blue;
         text-decoration: none;
       }
       .text-normalize{
