--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,37 +68,42 @@
         position: fixed;
         z-index:100;
         top:0;
-        bottom: 10%;
+        bottom: 0;
         overflow: hidden;
         left:0;
         right: 0;
-        background: gold;
+        background: black;
       }
-      #repair-this > .strip{
+      #repair-this > .stripe{
         position: absolute;
         background: transparent;
-        overflow: scroll;
+        overflow: hidden;
         top: 0;
         width: 5%;
         height: 100%;
-        padding-right: 17px; /* Increase/decrease this value for cross-browser compatibility */
-        box-sizing: content-box; /* So the width will be 100% + 17px */
       }
-
-      #repair-this > .strip > .image-wrapper{
-        position: relative;
-        background: black;
-        height: 150%;
+      #repair-this > .stripe > .info{
+        position: absolute;
         width: 100%;
+        height: 50px;
+      }
+      #repair-this > .stripe > .image-wrapper{
+        position: relative;
+        background: white;
+        height: 100%;
+        width: 100%;
+        top: 0%;
+        transition: top .5s ease-in-out;
       }
 
-      #repair-this > .strip > .image-wrapper > .image{
+      #repair-this > .stripe > .image-wrapper > .image{
         position: absolute;
         width: 100%;
         height: 50%;
         top: 25%;
-        background:magenta;
-        background: url(assets/repair_b.svg);
+      }
+      #repair-this > .stripe > .image-wrapper > .image > img{
+        width: 100%;
       }
     </style>
   </head>
@@ -115,37 +120,21 @@
       </filter>
     </svg>
     {% if page.ref == 'index' %}
-    <img src="assets/repair_b.svg" style='max-height:70%'/>
-
     <div id="repair-this">
-      <div class="strip" style="left:0%">
+      <!-- <div class="stripe" style="left:0%">
         <div class="image-wrapper" style="top:20%">
-          <div class="image"></div>
+          <div class="image">
+            <img src="assets/images/repair_logo_md_01.gif" />
+          </div>
         </div>
       </div>
-      <div class="strip" style="left:5%">
-        <div class="image-wrapper" style="top:27%">
-          <div class="image" style="background-position-x: -5%"></div>
+      <div class="stripe" style="left:5%">
+        <div class="image-wrapper" style="top:16%">
+          <div class="image">
+            <img src="assets/images/repair_logo_md_02.gif" />
+          </div>
         </div>
-      </div>
-      <div class="strip" style="left:10%"></div>
-      <div class="strip" style="left:15%"></div>
-      <div class="strip" style="left:20%"></div>
-      <div class="strip" style="left:25%"></div>
-      <div class="strip" style="left:30%"></div>
-      <div class="strip" style="left:35%"></div>
-      <div class="strip" style="left:40%"></div>
-      <div class="strip" style="left:45%"></div>
-      <div class="strip" style="left:50%"></div>
-      <div class="strip" style="left:55%"></div>
-      <div class="strip" style="left:60%"></div>
-      <div class="strip" style="left:65%"></div>
-      <div class="strip" style="left:70%"></div>
-      <div class="strip" style="left:75%"></div>
-      <div class="strip" style="left:80%"></div>
-      <div class="strip" style="left:85%"></div>
-      <div class="strip" style="left:90%"></div>
-      <div class="strip" style="left:95%"></div>
+      </div>-->
     </div>
 
     {% endif %}
@@ -170,7 +159,160 @@
     </div>
       <!-- eof fluid container -->
       {% include footer.html %}
+    <script src="assets/js/d3.custom.min.js"></script>
     <script>
+    var currentSize = 'md';
+    var _scrambleTimer;
+    /**
+      * generate an array of x objects based on <size> params containing {left, top, size}
+      */
+    function generateData(size) {
+      var num = 20;
+      var currentSize = '' + size;
+      switch(size) {
+        case 'sm':
+          num = 10;
+          break;
+        case 'md':
+          num = 20;
+          break;
+        case 'lg':
+        case 'xl':
+          currentSize = 'lg';
+          num = 25;
+          break;
+        case 'xxl':
+          num = 50;
+          break;
+        default: // xs
+          num = 5;
+          break;
+      }
+      var data = (new Array(num).fill(0)).map(function(d,i) {
+        return {
+          size: currentSize,
+          top: parseInt(Math.random() * 50) - 25,
+          left: (100 / num) * i,
+          width: (100 / num),
+          k: size + i,
+        };
+      });
+      console.log('generateData() size:', size,'generated:', data.length, 'items, sample:', data[0], data[1]);
+      return data;
+    };
+    function generateRandomDelay(initial, seed) {
+      return function() {
+        return (initial + (parseInt(Math.random()*seed) / 10)) + 's';
+      }
+    };
+
+    function update(selection, data) {
+      var stripesGenerator = selection.selectAll('.stripe').data(data, function(d) {
+        return d.k;
+      });
+
+      stripesGenerator.exit().remove();
+      // UPDATE old elements present in new data.
+      stripesGenerator
+        .classed('update', true)
+        .select('.image-wrapper')
+        .style('top', function (d) {
+          return d.top + '%';
+        }).style('transition-delay', generateRandomDelay(0, 10))
+      stripesGenerator
+        .select('.delay')
+
+      // ENTER new elements present in new data.
+      var stripes = stripesGenerator.enter()
+        .append('div')
+        .classed('stripe', true)
+        .attr('data-key', function(d) {
+          return d.k;
+        });
+
+      stripes
+        .style('left', function (d) {
+          return d.left + '%';
+        })
+        .style('width', function (d) {
+          return d.width + '%';
+        })
+        .style('transition-delay','0s');
+
+      stripes
+        .append('div')
+        .classed('image-wrapper', true)
+          .on('mouseenter', function() {
+            d3.select(this).style('top', function (d) {
+              return '0%';
+            }).style('transition-delay', '0s')
+          })
+          .on('click', function() {
+            d3.select(this).style('top', function (d) {
+              return '0%';
+            }).style('transition-delay', '0s')
+          })
+          .on('mouseleave', function() {
+            d3.select(this).style('top', function (d) {
+              return d.top + '%';
+            }).style('transition-delay', generateRandomDelay(3, 50))
+          })
+          .style('top', function (d) {
+            return d.top + '%';
+          })
+          .append('div')
+          .classed('image', true)
+
+            .append('img')
+            .attr('src', function(d, i) {
+              return [
+                'assets/images/repair_logo_',
+                d.size,
+                '_',
+                String(i + 1).padStart(2, '0'), '.gif'
+              ].join('');
+            });
+    };
+
+    function scramble() {
+      clearTimeout(_scrambleTimer);
+      console.info('Scramble!');
+      update(repairThis, generateData(currentSize));
+      _scrambleTimer = setTimeout(scramble, 10000);
+    }
+
+    function onResize() {
+      currentSize = 'xs';
+      if (window.innerWidth > 1400) {
+        // Extra extra large devices (very large desktops, 1400px and up)
+        currentSize = 'xxl';
+      } else if (window.innerWidth > 1200) {
+        // Extra large devices (large desktops, 1200px and up)
+        currentSize = 'xl';
+      } else if (window.innerWidth > 992) {
+        // Large devices (desktops, 992px and up)
+        currentSize = 'lg';
+      } else if (window.innerWidth > 768) {
+        // Medium devices (tablets, 768px and up)
+        currentSize = 'md';
+      } else if (window.innerWidth > 576) {
+        // Small devices (landscape phones, 576px and up)
+        currentSize = 'sm';
+      }
+      console.info('@window.onResize currentSize:', currentSize);
+
+      clearTimeout(_scrambleTimer);
+      _scrambleTimer = setTimeout(scramble, 500);
+    }
+
+
+    document.addEventListener('DOMContentLoaded', (event) => {
+      console.info('@DOMContentLoaded');
+      // update variable
+      repairThis = d3.select('#repair-this');
+      window.onresize = onResize;
+      onResize();
+    });
     </script>
   </body>
 </html>
