--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,21 +2,24 @@
   <div class="container">
     <div class="row">
       <div class="col-6">
-        <p >
+        <!-- <p>
           <a href="/who-we-are/">Who we are</a>
           <br>
           <a href="/contact-us/">Contact us</a>
           <br>
           <a href="/legal-notice/">Legal Notice</a>
-        </p>
+        </p> -->
       </div>
     </div>
     <div class="row">
       <div class="col">
-        Made with ❤ at <a href="https://c2dh.uni.lu/" target="_blank">C2DH</a>
-        (v. <a href="https://github.com/C2DH/repair" target="_blank">{{site.github.build_revision | slice: 0, 7}}</a>)
+        <span class="bg-white"> Made with ❤ at <a href="https://c2dh.uni.lu/" target="_blank">C2DH</a>
+        (v. <a href="https://github.com/C2DH/repair" target="_blank">{{site.github.build_revision | slice: 0, 7}}</a>)</a>
         <p>
-          Copyright © <a href='https://wwwen.uni.lu/' target='_blank'>Université du Luxembourg</a> ({{ site.time | date: '%Y' }}). All rights reserved.
+          <span class="bg-white">
+            Copyright © <a href='https://wwwen.uni.lu/' target='_blank'>Université du Luxembourg</a> ({{ site.time | date: '%Y' }}).
+            All rights reserved.
+          </span>
         </p>
       </div>
     </div>
