--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,20 +1,43 @@
----
-layout: default
----
-
-{% assign parts = page.content | split: site.excerpt_separator %}
-
-<h1 class="mt-4 py-2 ">
-  {{ parts | first | markdownify}}
-</h1>
-
-<div class="card-columns mt-4">
-  <!-- all posts in this category -->
-  {% assign all_posts = site.posts %}
-  {% for post in all_posts %}
-    {% include post.html %}
-  {% endfor %}
-</div>
-<blockquote>
-  {{ parts | last }}
-</blockquote>
+<!DOCTYPE html>
+<html lang='{{ page.lang | default: site.lang }}'>
+  <head>
+    {% include head.html %}
+    <style>
+      body {
+        background: black;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="repair-this">
+      <!-- <div class="stripe" style="left:0%">
+        <div class="image-wrapper" style="top:20%">
+          <div class="image">
+            <img src="assets/images/repair_logo_md_01.gif" />
+          </div>
+        </div>
+      </div>
+      <div class="stripe" style="left:5%">
+        <div class="image-wrapper" style="top:16%">
+          <div class="image">
+            <img src="assets/images/repair_logo_md_02.gif" />
+          </div>
+        </div>
+      </div>-->
+    </div>
+    <div class="d-flex align-items-center h-100">
+      <div class="container-fluid">
+        <div class="row">
+          {% for ref in site.data.navigation.level_2 %}
+          {% assign nav_item = site.pages|where:"ref",ref|where:"lang",page.lang|first %}
+          <div class="col">
+            <a class="btn btn-primary btn-transparent btn-block" href="">{{ nav_item.title }}</a>
+          </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+    <script src="assets/js/d3.custom.min.js"></script>
+    <script src="assets/js/runtime.js"></script>
+  </body>
+</html>
