fix layout, add intermediate layout for columns

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,111 +1,7 @@
 <!DOCTYPE html>
 <html lang='{{ page.lang | default: site.lang }}'>
   <head>
-    <meta charset='utf-8'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>{% if page.title %}{{page.title}} · {% endif %}{{site.title}}</title>
-    <link rel="stylesheet" href="/repair/assets/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans:400,700&display=swap" rel="stylesheet">
-    <style>
-      html,body{
-        height: 100%;
-        margin: 0;
-      }
-      body{
-        font-family: 'IBM Plex Sans', sans-serif;
-        color: black;
-      }
-      a{
-        text-decoration: underline;
-        color: black;
-      }
-      a.nav-link{
-        white-space: nowrap;
-      }
-      a.nav-link.active{
-        color: blue;
-        text-decoration: none;
-      }
-      .text-normalize{
-        font-size: inherit;
-      }
-      .content{
-        min-height: 100%;
-      }
-      .content > .content-inside{
-        padding: 0px;
-        padding-bottom: 200px;
-      }
-      .footer {
-        height: 200px;
-        margin-top: -200px;
-      }
-      .card-columns{
-        column-count: 2;
-      }
-      .card{
-        border-color: transparent;
-      }
-      .card .card-body{
-        padding-left: 0;
-        padding-right: 0;
-      }
-      .card > img {
-        -webkit-filter: url(#monochrome);
-        filter:  url(#monochrome);
-      }
-      aside{
-        min-width: 200px;
-      }
-      code{
-        color: blue;
-      }
-      .defs-only{
-        display: none;
-      }
-      #repair-this {
-        position: fixed;
-        z-index:100;
-        top:0;
-        bottom: 0;
-        overflow: hidden;
-        left:0;
-        right: 0;
-        background: black;
-      }
-      #repair-this > .stripe{
-        position: absolute;
-        background: transparent;
-        overflow: hidden;
-        top: 0;
-        width: 5%;
-        height: 100%;
-      }
-      #repair-this > .stripe > .info{
-        position: absolute;
-        width: 100%;
-        height: 50px;
-      }
-      #repair-this > .stripe > .image-wrapper{
-        position: relative;
-        background: white;
-        height: 100%;
-        width: 100%;
-        top: 0%;
-        transition: top .5s ease-in-out;
-      }
-
-      #repair-this > .stripe > .image-wrapper > .image{
-        position: absolute;
-        width: 100%;
-        height: 50%;
-        top: 25%;
-      }
-      #repair-this > .stripe > .image-wrapper > .image > img{
-        width: 100%;
-      }
-    </style>
+    {% include head.html %}
   </head>
 
   <body>
@@ -119,25 +15,7 @@
             0  0 0 1   0" />
       </filter>
     </svg>
-    {% if page.ref == 'index' %}
-    <div id="repair-this">
-      <!-- <div class="stripe" style="left:0%">
-        <div class="image-wrapper" style="top:20%">
-          <div class="image">
-            <img src="assets/images/repair_logo_md_01.gif" />
-          </div>
-        </div>
-      </div>
-      <div class="stripe" style="left:5%">
-        <div class="image-wrapper" style="top:16%">
-          <div class="image">
-            <img src="assets/images/repair_logo_md_02.gif" />
-          </div>
-        </div>
-      </div>-->
-    </div>
 
-    {% endif %}
 
     <div class="content">
       <div class="content-inside">
@@ -159,160 +37,7 @@
     </div>
       <!-- eof fluid container -->
       {% include footer.html %}
-    <script src="assets/js/d3.custom.min.js"></script>
-    <script>
-    var currentSize = 'md';
-    var _scrambleTimer;
-    /**
-      * generate an array of x objects based on <size> params containing {left, top, size}
-      */
-    function generateData(size) {
-      var num = 20;
-      var currentSize = '' + size;
-      switch(size) {
-        case 'sm':
-          num = 10;
-          break;
-        case 'md':
-          num = 20;
-          break;
-        case 'lg':
-        case 'xl':
-          currentSize = 'lg';
-          num = 25;
-          break;
-        case 'xxl':
-          num = 50;
-          break;
-        default: // xs
-          num = 5;
-          break;
-      }
-      var data = (new Array(num).fill(0)).map(function(d,i) {
-        return {
-          size: currentSize,
-          top: parseInt(Math.random() * 50) - 25,
-          left: (100 / num) * i,
-          width: (100 / num),
-          k: size + i,
-        };
-      });
-      console.log('generateData() size:', size,'generated:', data.length, 'items, sample:', data[0], data[1]);
-      return data;
-    };
-    function generateRandomDelay(initial, seed) {
-      return function() {
-        return (initial + (parseInt(Math.random()*seed) / 10)) + 's';
-      }
-    };
-
-    function update(selection, data) {
-      var stripesGenerator = selection.selectAll('.stripe').data(data, function(d) {
-        return d.k;
-      });
-
-      stripesGenerator.exit().remove();
-      // UPDATE old elements present in new data.
-      stripesGenerator
-        .classed('update', true)
-        .select('.image-wrapper')
-        .style('top', function (d) {
-          return d.top + '%';
-        }).style('transition-delay', generateRandomDelay(0, 10))
-      stripesGenerator
-        .select('.delay')
-
-      // ENTER new elements present in new data.
-      var stripes = stripesGenerator.enter()
-        .append('div')
-        .classed('stripe', true)
-        .attr('data-key', function(d) {
-          return d.k;
-        });
-
-      stripes
-        .style('left', function (d) {
-          return d.left + '%';
-        })
-        .style('width', function (d) {
-          return d.width + '%';
-        })
-        .style('transition-delay','0s');
-
-      stripes
-        .append('div')
-        .classed('image-wrapper', true)
-          .on('mouseenter', function() {
-            d3.select(this).style('top', function (d) {
-              return '0%';
-            }).style('transition-delay', '0s')
-          })
-          .on('click', function() {
-            d3.select(this).style('top', function (d) {
-              return '0%';
-            }).style('transition-delay', '0s')
-          })
-          .on('mouseleave', function() {
-            d3.select(this).style('top', function (d) {
-              return d.top + '%';
-            }).style('transition-delay', generateRandomDelay(3, 50))
-          })
-          .style('top', function (d) {
-            return d.top + '%';
-          })
-          .append('div')
-          .classed('image', true)
-
-            .append('img')
-            .attr('src', function(d, i) {
-              return [
-                'assets/images/repair_logo_',
-                d.size,
-                '_',
-                String(i + 1).padStart(2, '0'), '.gif'
-              ].join('');
-            });
-    };
-
-    function scramble() {
-      clearTimeout(_scrambleTimer);
-      console.info('Scramble!');
-      update(repairThis, generateData(currentSize));
-      _scrambleTimer = setTimeout(scramble, 10000);
-    }
-
-    function onResize() {
-      currentSize = 'xs';
-      if (window.innerWidth > 1400) {
-        // Extra extra large devices (very large desktops, 1400px and up)
-        currentSize = 'xxl';
-      } else if (window.innerWidth > 1200) {
-        // Extra large devices (large desktops, 1200px and up)
-        currentSize = 'xl';
-      } else if (window.innerWidth > 992) {
-        // Large devices (desktops, 992px and up)
-        currentSize = 'lg';
-      } else if (window.innerWidth > 768) {
-        // Medium devices (tablets, 768px and up)
-        currentSize = 'md';
-      } else if (window.innerWidth > 576) {
-        // Small devices (landscape phones, 576px and up)
-        currentSize = 'sm';
-      }
-      console.info('@window.onResize currentSize:', currentSize);
-
-      clearTimeout(_scrambleTimer);
-      _scrambleTimer = setTimeout(scramble, 500);
-    }
 
 
-    document.addEventListener('DOMContentLoaded', (event) => {
-      console.info('@DOMContentLoaded');
-      // update variable
-      repairThis = d3.select('#repair-this');
-      window.onresize = onResize;
-      onResize();
-    });
-    </script>
   </body>
 </html>
