--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,21 +1,9 @@
 ---
-layout: default
+layout: columns
 ---
 
-
-{% assign parts = page.content | split: site.excerpt_separator %}
-
-<h1 class="mt-4 py-2 ">
-  {{ parts | first | markdownify}}
-</h1>
-
-<div class="card-columns mt-4">
-  <!-- all posts in this category -->
-  {% assign category_posts = site.posts|where:'category',page.ref %}
-  {% for post in category_posts %}
-    {% include post.html %}
-  {% endfor %}
-</div>
-<blockquote>
-  {{ parts | last }}
-</blockquote>
+<!-- all posts in this category will be inside .class-->
+{% assign category_posts = site.posts|where:'category',page.ref %}
+{% for post in category_posts %}
+  {% include post.html %}
+{% endfor %}
