--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,36 +1,33 @@
-<aside class="p-4">
+<aside class="pt-4 pr-4">
   <h1 class="px-3 pt-4 text-normalize">
     {{ site.title }}
   </h1>
   <!-- current pag aliases -->
   {% assign aliases = site.pages|where:"ref",page.ref %}
-  <!-- pages -->
+  <!-- level 1 -->
   <ul class="nav flex-column mt-4">
-    {% for ref in site.data.navigation.pages %}
+    {% for ref in site.data.navigation.level_1 %}
       {% assign nav_item = site.pages|where:"ref",ref|where:"lang":page.lang|first %}
-      <li class='nav-item'>
-        {% if page.ref == nav_item.ref %}
-          {% assign is_active = true %}
-        {% else %}
-          {% assign is_active = false %}
-
-          {% if page.categories contains nav_item.ref %}
-            {% assign is_active = true %}
-            {% assign is_expanded = true %}
-          {% else %}
-            {% assign is_active = false %}
-            {% assign is_expanded = false %}
-          {% endif %}
-        {% endif %}
-        <!-- post categories: highlight current category -->
-
-        <a class="nav-link d-inline-block {% if is_active %} active {% endif %}" href="{{site.baseurl}}{{ nav_item.url }}">
-          {{ nav_item.title }}
-           <!-- ({{ nav_item.ref }}-{{page.ref}}-{{is_active}}) -->
-        </a>
-      </li>
+      {% include nav_item.html %}
     {% endfor %}
   </ul>
+
+  <!-- level 2 -->
+  <ul class="nav flex-column mt-4">
+    {% for ref in site.data.navigation.level_2 %}
+      {% assign nav_item = site.pages|where:"ref",ref|where:"lang":page.lang|first %}
+      {% include nav_item.html %}
+    {% endfor %}
+  </ul>
+
+  <!-- level 3 -->
+  <ul class="nav flex-column mt-4">
+    {% for ref in site.data.navigation.level_3 %}
+      {% assign nav_item = site.pages|where:"ref",ref|where:"lang":page.lang|first %}
+      {% include nav_item.html %}
+    {% endfor %}
+  </ul>
+
   <!-- languages -->
   <ul class="nav mt-4">
     {% for language in site.languages %}
